00_backups/playground/_archive/kubernetes/nakadi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nakadi
  labels:
    app: nakadi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nakadi
  template:
    metadata:
      labels:
        app: nakadi
    spec:
      volumes:
      - name: zookeeper-data
        hostPath:
          path: /data/nakadi/zookeeper-data
          type: Directory 
      - name: zookeeper-datalog
        hostPath:
          path: /data/nakadi/zookeeper-datalog
          type: Directory
      - name: kafka-data
        hostPath:
          path: /data/nakadi/kafka-data
          type: Directory
      - name: kafka-secrets
        hostPath:
          path: /data/nakadi/kafka-secrets
          type: Directory
      - name: postgres-data
        hostPath:
          path: /data/nakadi/postgres-data
          type: Directory
      containers:
#      - name: nakadi-ui
#        image: roskenet/nakadi-ui:2.0.0
#        env: 
#        - name: NAKADI_API_URL
#          value: http://localhost:8080
      - name: nakadi-postgres
        image: postgres:16
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      - name: nakadi-zookeeper
        image: zookeeper:3.6
        volumeMounts:
        - mountPath: /data
          name: zookeeper-data
        - mountPath: /datalog
          name: zookeeper-datalog
      - name: nakadi-kafka
        image: bitnami/kafka:3.6
        volumeMounts:
        - mountPath: /var/lib/kafka/data
          name: kafka-data
        - mountPath: /etc/kafka/secrets
          name: kafka-secrets
      - name: nakadi
        image: roskenet/nakadi:2.0.0
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
