00_backups/playground/_archive/kubernetes/nakadi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakadi
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "nakadi.192-168-49-2.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nakadi
                port:
                  name: api
#          - pathType: Prefix
#            path: "/ui(/|$)(.*)"
#            backend:
#              service:
#                name: nakadi
#                port:
#                  name: ui
